z-index for search widget fixed.

--- a/packages/kth-style/public/sass/custom/slots/header.scss
+++ b/packages/kth-style/public/sass/custom/slots/header.scss
@@ -70,7 +70,7 @@ body {
             @media (min-width: 992px) {
               padding: 0;
               width: auto;
-              z-index: 3;
+              z-index: 2;
               flex-grow: 1;
               margin: 0;
               top: -8px;
